--- a/Materias/2S2020/PED_CE342/Aulas/Resenhas.tex
+++ b/Materias/2S2020/PED_CE342/Aulas/Resenhas.tex
@@ -1,4 +1,3 @@
-% Created 2020-09-11 sex 15:02
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -29,13 +28,233 @@ citecolor=blue,filecolor=blue,menucolor=blue,urlcolor=blue]{hyperref}
 \usepackage{attachfile}
 \usepackage{setspace}
 \usepackage{tikz}
-\author{Gabriel Petrini}
-\date{\today}
-\title{Como fazer resenhas acadêmicas}
+\author{PED: Gabriel Petrini}
+\date{21 de Setembro de 2020}
+\title{Resenha acadêmica}
 \begin{document}
 
 \maketitle
+\setcounter{tocdepth}{1}
+\tableofcontents
+
 
 \section*{Introdução}
-\label{sec:orge2c26cf}
+\label{sec:org8b334d5}
+
+\subsection*{O que é uma resenha?}
+\label{sec:orgbed96c1}
+
+Reflexão sobre um texto de outro
+
+\begin{itemize}
+\item Propósito específico
+\item Leitura ativa
+\end{itemize}
+
+\textbf{Importante:} Resenha \(\neq\) Resumo \(\neq\) Fichamento
+
+\begin{NOTES}
+\textbf{Resumo:} Condensação de um texto preservando a intenção do autor
+\end{NOTES}
+
+
+\subsection*{E uma resenha acadêmica?}
+\label{sec:org6330160}
+
+Existem vários tipos de resenha, vamos nos ater à \uline{resenha acadêmica}.
+
+Posicionamento crítico do objeto analisado em que são apresentadas relações entre seus elementos mais importantes:
+
+\begin{itemize}
+\item Contextualização
+\item Questões centrais
+\item Como argumento é construído
+\end{itemize}
+
+\subsection*{Etapas para elaborar uma resenha}
+\label{sec:orga2f5406}
+
+
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=.9\linewidth]{./esquema.png}
+\caption{\label{fig:esquema}Um esquema óbvio, mas necessário}
+\end{figure}
+
+
+\section*{Como ler um texto acadêmico?}
+\label{sec:org196c99a}
+
+A leitura ativa é a parte mais importante no processo de uma resenha. A escrita é o resultado.
+Segue uma \uline{sugestão} de como ler um texto acadêmico:
+
+\texttt{FISH-5SS}
+
+\subsection*{O que preciso saber?}
+\label{sec:org8881daf}
+
+FISH!
+
+\begin{itemize}
+\item \textbf{F} ield: Área do texto \(\Rightarrow\) Com quem os autores estão dialogando?
+\item \textbf{I} mportance: Relevância \(\Rightarrow\) Por que este texto está sendo resenhado?
+\item \textbf{S} upporting ideias/data: Embasamento teórico/Empírico \(\Rightarrow\) Quais as informações prévias para a compreensão do texto?
+\item \textbf{H} ypothesis: Quais são as hipóteses centrais?
+\end{itemize}
+
+
+\begin{NOTES}
+Este é um esqueleto que eu uso em alguns casos em que acho pertinente. Um dos motivos pelo qual gosto desta forma é a flexibilidade.
+Obviamente é possível incluir outros elementos importantes como é o caso da \textbf{Metodologia} adotada
+
+Lembrando mais uma vez que é apenas uma sugestão. Existem inúmeras alternativas ao FISH:
+
+\begin{itemize}
+\item Dar títulos aos parágrafos
+\item Mapas mentais/fluxosgramas
+\end{itemize}
+
+\textbf{Importante:} Se não conseguiu detectar alguns desses elementos, pode ser o caso de uma leitura mal feita/passiva
+\end{NOTES}
+
+\subsection*{Como sei que sei?}
+\label{sec:org88b38ac}
+
+5SS!
+
+\textbf{5 Seconds Syntesis:} Resumir a ideia ao mínimo possível
+
+\begin{itemize}
+\item Um parágrafo que sintetiza os elementos centrais do texto a ser resenhado
+\begin{itemize}
+\item Capacidade de síntese é uma das mais importantes
+\end{itemize}
+\end{itemize}
+
+\begin{NOTES}
+\texttt{Minha tese ficou longa porque não tive tempo de escrever pouco}
+
+Carlos Lessa
+\end{NOTES}
+
+\section*{Como escrever uma resenha acadêmica?}
+\label{sec:org424747e}
+
+\subsection*{O conhecimento e o texto acadêmico}
+\label{sec:orgd8167ec}
+
+\textbf{Conhecimento acadêmico:} Saber algo é a capacidade de escrever um parágrafo coeso sobre isso
+
+
+\textbf{Quanto preciso saber para escrever?:}
+
+\begin{itemize}
+\item Uma primeira aproximação é a partir da esquematização proposta pelo método FISH
+\item Outra informação relevante é sobre o limite de páginas
+\begin{itemize}
+\item Isso irá \emph{delimitar} quantos parágrafos (ideias coesas) a resenha terá
+\end{itemize}
+\end{itemize}
+
+
+\subsection*{Enfim, a resenha}
+\label{sec:orge23b908}
+
+Feita a leitura \uline{ativa} do texto, sistematizados seus principais elementos, basta organizar as ideias de forma coesa. 
+
+\begin{NOTES}
+Seguem algumas perguntas que podem guiar as resenhas desta disciplina:
+\end{NOTES}
+
+\begin{itemize}
+\item Como o contexto se relaciona com as hipóteses adotadas? São razoáveis?
+\item Em que medida estas ideias se diferenciam das anteriores? Existem elementos em comum?
+\item Quais são as implicações e proposições macroeconômicas?
+\item \textbf{Memo:} Resenha não é resumo. Não é necessário preservar a sequência e/ou intenção do autor
+\end{itemize}
+
+\begin{NOTES}
+Qual a importância da visão predominante na época em que outras ideias foram propostas?
+\begin{itemize}
+\item Em que medida a expressividade na Síntese Neoclássica foi relevante para as escolas que a sucederam?
+\end{itemize}
+\end{NOTES}
+
+\section*{O que esperamos das resenhas?}
+\label{sec:orgc3a642a}
+
+\subsection*{Instruções}
+\label{sec:org2b6d315}
+
+\begin{itemize}
+\item Individuais
+\item Forma de entrega: em discussão
+\item Devem ter no máximo duas páginas
+\end{itemize}
+
+Serão devolvidas aos alunos
+
+\subsection*{Elementos}
+\label{sec:org45ef676}
+
+As resenhas serão avaliadas de acordo com as respostas dadas às seguintes questões
+ao longo do texto:
+
+\begin{itemize}
+\item Qual é o tema do texto? Qual o objetivo do autor?
+\item Qual é a hipótese/argumento central do autor?
+\item Quais os conceitos utilizados?
+\item Como ele desenvolve e organiza os argumentos?
+\item Qual a conclusão do texto?
+\end{itemize}
+
+
+A forma em que as ideias são apresentadas (clareza e organização do texto) também
+será avaliada.
+
+\subsection*{Cronograma}
+\label{sec:org594369b}
+
+\begin{center}
+\begin{tabular}{ll}
+Resenha & Data\\
+\hline
+Monetaristas & 19/10\\
+Novos Clássicos & 09/11\\
+Novos Keynesianos & 23/11\\
+Modelo de Metas para Inflação & 30/11\\
+\hline
+\end{tabular}
+\end{center}
+
+\section*{Referências}
+\label{sec:org020b90b}
+
+\begin{itemize}
+\item \href{https://posgraduando.com/fish-qtcr-5ss-leitura-artigos/}{Método FISH/5SS}
+\item \href{https://www.youtube.com/watch?v=vECQOychZyY}{O que é um parágrafo?}
+\end{itemize}
+
+\subsection*{Obrigado}
+\label{sec:orgcbd429b}
+
+\section*{Como saber o que escrever?}
+\label{sec:org416a854}
+
+
+\textbf{Memo:} Saber algo é a capacidade de escrever um parágrafo coeso sobre isso
+
+\begin{table}[htbp]
+\caption{\href{https://www.youtube.com/watch?v=vECQOychZyY}{O que é um parágrafo?}}
+\centering
+\begin{tabular}{ll}
+\hline
+Qual a dificuldade do leitor ao se deparar com este conhecimento? & Tipo de parágrafo\\
+\hline
+"Acreditar" & Auxiliador\\
+Compreender & Dissertativo\\
+Concordar & Argumentativo\\
+\hline
+\end{tabular}
+\end{table}
 \end{document}
